# bambooML

./: .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
bambooml/: __init__.py  cli.py  utils.py
bambooml/core/: config.py  experiment.py  logging.py  registry.py
bambooml/data/: config.py  dataio_adapter.py  dataset.py  fileio.py  preprocess.py  tools.py
bambooml/llm/: lora.py
bambooml/monitor/: tensorboard.py
bambooml/runner/: cli.py  submit.py
bambooml/tasks/: evaluate.py  export.py  inspect.py  metrics.py  predict.py  train.py
examples/: data.csv  data.yaml  model.py  train_job.sh
tests/: __init__.py  conftest.py  test_config.py  test_metrics.py
